[metadata]
name = zerobin
version = attr: zerobin.__version__
description = A client side encrypted pastebin
long_description = file: README.rst
author= Sam et Max
keywords = pastebin, encryption,
author_email = lesametlemax@gmail.com
url = https://0bin.net

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    clize==4.1.1
    lockfile==0.12.2
    bottle==0.12.18
    Beaker==1.11.0
    Paste==3.4.3
    appdirs==1.4.4
    bleach==3.1.5

[options.package_data]
* = static/img/*, static/css/*, static/js/*, view/*
hello = *.msg

[options.entry_points]
console_scripts =
    zerobin = zerobin.cli:main
